--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,7 +34,15 @@ aside section{
     background-color: #f6f6f6;
     border: 1px solid #ccc;
     margin: 20px;
-    padding: 10px;
+}
+
+aside section ul,
+aside section label {
+    padding-left: 20px;
+}
+
+aside section li{
+    line-height: 1.8;
 }
 
 aside h3{
